# ComputerVision

./: .gitmodules  CMakeLists.txt  ImageRead.cpp
FourImageProject/: CMakeLists.txt  image.cpp  image.h  main.cpp
OneReadingImageData/: CMakeLists.txt  ImageRead.cpp
ThreeCNN/: CMakeLists.txt
ThreeConvolution/: CMakeLists.txt  main.cpp
TwoImgFilter/: CMakeLists.txt  main.cpp
